# safe_and_smooth

./: .gitignore  .gitmodules  DatasetEvaluation.ipynb  Dockerfile  LICENSE  Makefile  README.md  SafeAndSmooth.ipynb  certificate.py  datasets.py  decompositions.py  environment.yml  evaluate_real.py  gauss_newton.py  gaussian_process.py  helper_params.py  plotting_tools.py  problem.py  requirements.txt  sdp_setup.py  setup.cfg  simulate_cert_new.py  simulate_noise.py  simulate_time.py
.github/workflows/: python-package-conda.yml
_data/: README.md
_notebooks/: DatasetEvaluation.ipynb  GaussianProcess.ipynb  SafeAndSmooth.ipynb
_results/: default_real.py  default_sim.py
_results/real_top/: params.py
_results/real_top_calib/: params.py
_results/real_top_estimate/: params.json  params.py
_results/simulation_noise/: params.json  params.py
_results/simulation_noise_100/: params.json  params.py
_results_test/: default_real.json  default_sim.json
_results_test/real_top/: params.json
_results_test/real_top_calib/: params.json
_scripts/: evaluate_real.py  generate_all_results.sh  generate_test_results.sh  plot_results.py  simulate_noise.py  simulate_time.py
_test/: test_gauss_newton.py  test_gp.py  test_ldl.py  test_problem.py  test_sdp_setup.py
_tools/: get_server_results.sh
poly_certificate/: __init__.py  cert_matrix.py  certificate.py  cholesky.py  datasets.py  decompositions.py  gauss_newton.py  old_certificate.py  problem.py  sdp_setup.py
poly_certificate/utils/: helper_params.py
utils/: helper_params.py  plotting_tools.py
