[metadata]
name = poly_certificate
version = 0.0.1
authors = [
    {name = "Frederike Dümbgen", email = "frederike.duembgen@gmail.com" },]
description = Codebase for safe and smooth results
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/utiasASRL/safe_and_smooth.git"

[options]
packages = find:

[options.packages.find] # do not mistake tests/ for a package directory
exclude=tests*

[flake8]
ignore = W292, W391, F541, F841, W503 
exclude = _notebooks/*, *.ipynb_checkpoints*
max-line-length = 99
